--- a/index.html
+++ b/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full-stack Group-2</title>
+    <meta>Kafe a bone me pi tash</meta>
 </head>
+
 <body>
-    
+
 </body>
-</html>
