--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Full-stack Group-2</title>
 </head>
 <body>
-    
+    <p>this is a new line</p>
+    <p>and this is another one</p>
 </body>
 </html>
