ndryshim ne ngjyren e sfondit

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Full-stack Group-2</title>
   </head>
-  <body>
+  <body style="background-color: gray;">
     <h1>Full stack development</h1>
   </body>
 </html>
