added new branch

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Full-stack Group-2</title>
   </head>
   <body>
-    <h1>Full stack development</h1>
+    <h1>Hello World</h1>
   </body>
 </html>
